{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 213,
  "lineage": "595675a6-b0c5-3405-d35b-11f7b6204108",
  "resources": [
    {
      "module": "module.us-east-loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:982534361364:loadbalancer/app/us-east-alb/7a5b32ca21f3dc39",
            "arn_suffix": "app/us-east-alb/7a5b32ca21f3dc39",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "us-east-alb-1600607696.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:982534361364:loadbalancer/app/us-east-alb/7a5b32ca21f3dc39",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "us-east-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03bcf6b395df79a20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a55609fda16a01f"
              },
              {
                "subnet_id": "subnet-0e443e66dadfe3939"
              }
            ],
            "subnets": [
              "subnet-07a55609fda16a01f",
              "subnet-0e443e66dadfe3939"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-017a3b109e0cbe8b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.us-east-loadbalancer.aws_security_group.this",
            "module.vpc_us_east.aws_subnet.public",
            "module.vpc_us_east.aws_vpc.this",
            "module.vpc_us_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534361364:security-group/sg-03bcf6b395df79a20",
            "description": "Security group for us-east-alb application load balancer",
            "egress": [],
            "id": "sg-03bcf6b395df79a20",
            "ingress": [],
            "name": "us-east-alb-20250419224004589000000007",
            "name_prefix": "us-east-alb-",
            "owner_id": "982534361364",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-017a3b109e0cbe8b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:982534361364:loadbalancer/app/us-west-alb/d9505fd6bdd7dff6",
            "arn_suffix": "app/us-west-alb/d9505fd6bdd7dff6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "us-west-alb-1540029943.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:982534361364:loadbalancer/app/us-west-alb/d9505fd6bdd7dff6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "us-west-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0370994a34e9d31a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b09e97c27b53278"
              },
              {
                "subnet_id": "subnet-0da734ac01a8dfa0c"
              }
            ],
            "subnets": [
              "subnet-05b09e97c27b53278",
              "subnet-0da734ac01a8dfa0c"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-038cadd3603056875",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.us-west-loadbalancer.aws_security_group.this",
            "module.vpc_us_west.aws_subnet.public",
            "module.vpc_us_west.aws_vpc.this",
            "module.vpc_us_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982534361364:security-group/sg-0370994a34e9d31a4",
            "description": "Security group for us-west-alb application load balancer",
            "egress": [],
            "id": "sg-0370994a34e9d31a4",
            "ingress": [],
            "name": "us-west-alb-20250419224008225900000005",
            "name_prefix": "us-west-alb-",
            "owner_id": "982534361364",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-038cadd3603056875"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us_east_ec2_allow_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": []
    },
    {
      "module": "module.us_east_rds_allow_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": []
    },
    {
      "module": "module.vpc_us_east",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534361364:internet-gateway/igw-0d94e0ad0746487c0",
            "id": "igw-0d94e0ad0746487c0",
            "owner_id": "982534361364",
            "tags": {
              "Name": "us-east-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-east-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-017a3b109e0cbe8b4"
          },
          "dependencies": [
            "module.vpc_us_east.aws_vpc.this",
            "module.vpc_us_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534361364:subnet/subnet-07a55609fda16a01f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a55609fda16a01f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534361364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-vpc-public-us-east-1a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-east-vpc-public-us-east-1a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-017a3b109e0cbe8b4"
          },
          "dependencies": [
            "module.vpc_us_east.aws_vpc.this",
            "module.vpc_us_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534361364:subnet/subnet-0e443e66dadfe3939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e443e66dadfe3939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534361364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-vpc-public-us-east-1b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-east-vpc-public-us-east-1b",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-017a3b109e0cbe8b4"
          },
          "dependencies": [
            "module.vpc_us_east.aws_vpc.this",
            "module.vpc_us_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_prov",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534361364:vpc/vpc-017a3b109e0cbe8b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0404e8e7dbf848b4c",
            "default_route_table_id": "rtb-01b1204c50f31b357",
            "default_security_group_id": "sg-025688f11f0657248",
            "dhcp_options_id": "dopt-069e72c4a0ae42cc5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017a3b109e0cbe8b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b1204c50f31b357",
            "owner_id": "982534361364",
            "tags": {
              "Name": "us-east-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-east-vpc",
              "environment": "dev",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_us_west",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982534361364:internet-gateway/igw-0c969b3b4cf6a8b67",
            "id": "igw-0c969b3b4cf6a8b67",
            "owner_id": "982534361364",
            "tags": {
              "Name": "us-west-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-west-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-038cadd3603056875"
          },
          "dependencies": [
            "module.vpc_us_west.aws_vpc.this",
            "module.vpc_us_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982534361364:subnet/subnet-0da734ac01a8dfa0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da734ac01a8dfa0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534361364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-vpc-public-us-west-1a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-west-vpc-public-us-west-1a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-038cadd3603056875"
          },
          "dependencies": [
            "module.vpc_us_west.aws_vpc.this",
            "module.vpc_us_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982534361364:subnet/subnet-05b09e97c27b53278",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b09e97c27b53278",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534361364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-vpc-public-us-west-1b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-west-vpc-public-us-west-1b",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-038cadd3603056875"
          },
          "dependencies": [
            "module.vpc_us_west.aws_vpc.this",
            "module.vpc_us_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:982534361364:vpc/vpc-038cadd3603056875",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b432bf2b9510b15",
            "default_route_table_id": "rtb-050f26feccf505d54",
            "default_security_group_id": "sg-0741b2d0313cf9d9a",
            "dhcp_options_id": "dopt-046dd91c50b5930b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038cadd3603056875",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050f26feccf505d54",
            "owner_id": "982534361364",
            "tags": {
              "Name": "us-west-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "us-west-vpc",
              "environment": "dev",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}